Fix incorrect unreadable symbols that appear in a text field

--- a/src/app/components/text-field/text-field.scss
+++ b/src/app/components/text-field/text-field.scss
@@ -3,12 +3,4 @@
   position: relative;
   box-sizing: border-box;
   width: 100%;
-
-  &::before {
-    content: ' ';
-    display: inline-block;
-    width: 0;
-    height: 0;
-    pointer-events: none;
-  }
 }
